Update src/ru/nsu/ccfit/zuev/osu/game/cursor/flashlight/FlashLightEntity.java
Co-authored-by: Rian <52914632+Rian8337@users.noreply.github.com>